force-app/main/default/objects/QuoteLineItem/fields/Annual_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>Annual_Amount_USD__c</fullName>
    <description>Annual Amount converted to USD using locked exchange rate - provides consistent USD reporting for Quote Line Items regardless of currency fluctuations</description>
    <formula>IF(ISBLANK(Exchange_Rate__c), 
    NULL, 
    &quot;$&quot; + TEXT(ROUND(Annual_Amount__c * Exchange_Rate__c, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual Amount converted to USD using the locked exchange rate. Updates automatically when exchange rate or annual amount changes.</inlineHelpText>
    <label>Annual Amount (USD)</label>
    <type>Text</type>
</CustomField>