force-app/main/default/objects/QuoteLineItem/fields/Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Rate__c</fullName>
    <description>Exchange rate for USD conversion - locked at Quote creation and protected during approval process. Used to calculate USD conversion fields and maintain rate consistency across related objects.</description>
    <inlineHelpText>Exchange rate used for USD conversion calculations. This field is populated automatically at Quote Line Item creation and locked during Quote approval process.</inlineHelpText>
    <label>Exchange Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>