force-app/main/default/objects/QuoteLineItem/fields/Include_in_ARR__c.field-meta.xml
<CustomField>
    <fullName>Include_in_ARR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether this quote line item should be included in ARR calculations. Used to override standard ARR inclusion logic.</description>
    <inlineHelpText>Check this box to include this product in ARR calculations. Leave unchecked to exclude from ARR.</inlineHelpText>
    <label>Include in ARR Override</label>
    <type>Checkbox</type>
</CustomField>