force-app/main/default/objects/QuoteLineItem/fields/Include_in_ARR_Sum__c.field-meta.xml
<CustomField>
    <fullName>Include_in_ARR_Sum__c</fullName>
    <description>Determines whether this quote line item should be included in ARR sum calculations and reporting rollups.</description>
    <inlineHelpText>Select &quot;Yes&quot; to include this product in ARR sum calculations and revenue reporting, &quot;No&quot; to exclude.</inlineHelpText>
    <label>Include in ARR Sum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>