force-app/main/default/objects/QuoteLineItem/fields/List_Price_USD__c.field-meta.xml
<CustomField>
    <fullName>List_Price_USD__c</fullName>
    <description>List Price converted to USD using locked exchange rate - provides consistent USD reporting for Quote Line Items regardless of currency fluctuations</description>
    <formula>IF(ISBLANK(Exchange_Rate__c), 
    NULL, 
    &quot;$&quot; + TEXT(ROUND(List_Price__c * Exchange_Rate__c, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>List Price converted to USD using the locked exchange rate. Updates automatically when exchange rate or list price changes.</inlineHelpText>
    <label>List Price (USD)</label>
    <type>Text</type>
</CustomField>