force-app/main/default/objects/QuoteLineItem/fields/Total_Price_USD__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_USD__c</fullName>
    <description>Total Price converted to USD using locked exchange rate - provides consistent USD reporting for Quote Line Items regardless of currency fluctuations</description>
    <formula>IF(ISBLANK(Exchange_Rate__c), 
    NULL, 
    &quot;$&quot; + TEXT(ROUND(Total_Price__c * Exchange_Rate__c, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Price converted to USD using the locked exchange rate. Updates automatically when exchange rate or total price changes.</inlineHelpText>
    <label>Total Price (USD)</label>
    <type>Text</type>
</CustomField>