force-app/main/default/objects/QuoteLineItem/fields/TotalPrice_USD__c.field-meta.xml
<CustomField>
    <fullName>TotalPrice_USD__c</fullName>
    <description>Total line amount (UnitPrice × Quantity) converted to USD using locked exchange rate - provides consistent USD reporting for Quote Line Items regardless of currency fluctuations</description>
    <formula>IF(ISBLANK(Exchange_Rate__c), 
    NULL, 
    &quot;$&quot; + TEXT(ROUND((UnitPrice * Quantity) * Exchange_Rate__c, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total line amount converted to USD using the locked exchange rate. Calculated as UnitPrice × Quantity × Exchange Rate.</inlineHelpText>
    <label>TotalPrice (USD)</label>
    <type>Text</type>
</CustomField>