force-app/main/default/objects/QuoteLineItem/fields/UnitPrice_USD__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice_USD__c</fullName>
    <description>UnitPrice (standard field) converted to USD using locked exchange rate - provides consistent USD reporting for Quote Line Items regardless of currency fluctuations</description>
    <formula>IF(ISBLANK(Exchange_Rate__c), 
    NULL, 
    &quot;$&quot; + TEXT(ROUND(UnitPrice * Exchange_Rate__c, 2))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>UnitPrice (standard field) converted to USD using the locked exchange rate. Updates automatically when exchange rate or unit price changes.</inlineHelpText>
    <label>UnitPrice (USD)</label>
    <type>Text</type>
</CustomField>