force-app/main/default/objects/QuoteLineItem/fields/UnitPrice_USD_Reporting__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice_USD_Reporting__c</fullName>
    <description>USD value in Number format for SFDC reporting and aggregation</description>
    <formula>IF(ISBLANK(Quote.Exchange_Rate__c), 
NULL, 
ROUND(UnitPrice / Quote.Exchange_Rate__c, 2)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field contains the same USD value as UnitPrice USD but in Number format to enable Salesforce reporting, rollups, and calculations.</inlineHelpText>
    <label>UnitPrice (Reporting)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>