force-app/main/default/objects/QuoteLineItem/validationRules/VR_QLI_Annual_Amount_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_QLI_Annual_Amount_Required</fullName>
    <active>false</active>
    <description>Annual amount should be populated for subscription products</description>
    <errorConditionFormula>AND(
  ISBLANK(Annual_Amount__c),
  Product_Family__c = &quot;Software Subscriptions&quot;
)</errorConditionFormula>
    <errorDisplayField>Annual_Amount__c</errorDisplayField>
    <errorMessage>Annual amount should be automatically populated from opportunity line items</errorMessage>
</ValidationRule>