force-app/main/default/objects/QuoteLineItem/validationRules/VR_QLI_Service_Dates_Logical.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_QLI_Service_Dates_Logical</fullName>
    <active>true</active>
    <description>Ensure service start date is not after service end date</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Service_Start_Date__c)),
  NOT(ISBLANK(Service_End_Date__c)),
  Service_Start_Date__c &gt; Service_End_Date__c
)</errorConditionFormula>
    <errorDisplayField>Service_Start_Date__c</errorDisplayField>
    <errorMessage>Line item start date cannot be after end date</errorMessage>
</ValidationRule>